unpackaged/main/default/objects/loan__User_Branch_Info__c/loan__User_Branch_Info__c.object-meta.xml
<CustomObject>
    <label>User Branch Info</label>
    <nameField>
        <label>User Branch Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Branch Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>