unpackaged/main/default/objects/loan__User_Branch_Info__c/fields/loan__Branch__c.field-meta.xml
<CustomField>
    <fullName>loan__Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>loan__Office_Name__c</referenceTo>
    <relationshipLabel>User Branch Info</relationshipLabel>
    <relationshipName>User_Branch_Info</relationshipName>
    <type>Lookup</type>
</CustomField>