unpackaged/main/default/objects/loan__User_Branch_Info__c/fields/loan__Default_Branch__c.field-meta.xml
<CustomField>
    <fullName>loan__Default_Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Branch</label>
    <type>Checkbox</type>
</CustomField>