unpackaged/main/default/objects/loan__User_Branch_Info__c/fields/loan__User__c.field-meta.xml
<CustomField>
    <fullName>loan__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Branch_Info</relationshipName>
    <type>Lookup</type>
</CustomField>